fix schedule-location padding on small devices

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -9509,6 +9509,12 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   padding-left: 20px !important;
 }
 
+@media (max-width: 575px) {
+  .schedule-location {
+    padding-left: 0 !important;
+  }
+}
+
 /* Speaker images */
 
 .program-speaker-img {
